--- a/css/import.css
+++ b/css/import.css
@@ -1,6 +1,6 @@
-@import url('https://db.onlinewebfonts.com/c/d4f20dfedfdf197ed0ac52b09bf25551?family=GT+Walsheim+Pro+Medium');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('font.css');
 @import url('reset.css');
 @import url('global.css');
 @import url('bxslider.css');
