--- a/css/font.css
+++ b/css/font.css
@@ -1,8 +1,7 @@
-@font-face {font-family: "GT Walsheim Pro Medium";
-    src: url("https://db.onlinewebfonts.com/t/d4f20dfedfdf197ed0ac52b09bf25551.eot"); /* IE9*/
-    src: url("https://db.onlinewebfonts.com/t/d4f20dfedfdf197ed0ac52b09bf25551.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("https://db.onlinewebfonts.com/t/d4f20dfedfdf197ed0ac52b09bf25551.woff2") format("woff2"), /* chrome firefox */
-    url("https://db.onlinewebfonts.com/t/d4f20dfedfdf197ed0ac52b09bf25551.woff") format("woff"), /* chrome firefox */
-    url("https://db.onlinewebfonts.com/t/d4f20dfedfdf197ed0ac52b09bf25551.ttf") format("truetype"), /* chrome firefox opera Safari, Android, iOS 4.2+*/
-    url("https://db.onlinewebfonts.com/t/d4f20dfedfdf197ed0ac52b09bf25551.svg#GT Walsheim Pro Medium") format("svg"); /* iOS 4.1- */
-}
+@font-face {font-family: "Gt";
+    src: url("//db.onlinewebfonts.com/t/8d026c963e4feb5053ef8b0cf5ca1910.eot");
+    src: url("https://db.onlinewebfonts.com/t/8d026c963e4feb5053ef8b0cf5ca1910.eot?#iefix") format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/8d026c963e4feb5053ef8b0cf5ca1910.woff2") format("woff2"),
+    url("https://db.onlinewebfonts.com/t/8d026c963e4feb5053ef8b0cf5ca1910.woff") format("woff"),
+    url("https://db.onlinewebfonts.com/t/8d026c963e4feb5053ef8b0cf5ca1910.ttf") format("truetype"),
+    url("https://db.onlinewebfonts.com/t/8d026c963e4feb5053ef8b0cf5ca1910.svg#Gt") format("svg"); }
