--- a/css/global.css
+++ b/css/global.css
@@ -47,7 +47,7 @@ section.etcAboutBox h2,
 section.etcAboutBox > strong,
 section.etcAboutBox ul li span,
 footer div:last-child > a{
-    font-family: 'GT Walsheim';
+    font-family: 'GT Walsheim Regular';
 }
 aside.cartArea div ul li fieldset a strong,
 aside.cartArea div label,
