--- a/css/font.css
+++ b/css/font.css
@@ -1,21 +1,13 @@
-@font-face {font-family: "GT Walsheim Regular"; src:
-    url("//db.onlinewebfonts.com/t/768446cc3d04d6dd3289ae1715bdb682.eot"); src:
-    url("//db.onlinewebfonts.com/t/768446cc3d04d6dd3289ae1715bdb682.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/768446cc3d04d6dd3289ae1715bdb682.woff2") format("woff2"),
-    url("//db.onlinewebfonts.com/t/768446cc3d04d6dd3289ae1715bdb682.woff") format("woff"),
-    url("//db.onlinewebfonts.com/t/768446cc3d04d6dd3289ae1715bdb682.ttf") format("truetype"),
-    url("//db.onlinewebfonts.com/t/768446cc3d04d6dd3289ae1715bdb682.svg#GT Walsheim Regular") format("svg");}
-@font-face {font-family: "GT Walsheim Light"; src:
-    url("//db.onlinewebfonts.com/t/6d7bf85888fc8ef4357e0a27a0db8ce6.eot"); src:
-    url("//db.onlinewebfonts.com/t/6d7bf85888fc8ef4357e0a27a0db8ce6.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/6d7bf85888fc8ef4357e0a27a0db8ce6.woff2") format("woff2"),
-    url("//db.onlinewebfonts.com/t/6d7bf85888fc8ef4357e0a27a0db8ce6.woff") format("woff"),
-    url("//db.onlinewebfonts.com/t/6d7bf85888fc8ef4357e0a27a0db8ce6.ttf") format("truetype"),
-    url("//db.onlinewebfonts.com/t/6d7bf85888fc8ef4357e0a27a0db8ce6.svg#GT Walsheim Light") format("svg"); }
-@font-face {font-family: "GT Walsheim Bold"; src:
-    url("//db.onlinewebfonts.com/t/91e0638dac19aba2539d2b8b2a7981e8.eot"); src:
-    url("//db.onlinewebfonts.com/t/91e0638dac19aba2539d2b8b2a7981e8.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/91e0638dac19aba2539d2b8b2a7981e8.woff2") format("woff2"),
-    url("//db.onlinewebfonts.com/t/91e0638dac19aba2539d2b8b2a7981e8.woff") format("woff"),
-    url("//db.onlinewebfonts.com/t/91e0638dac19aba2539d2b8b2a7981e8.ttf") format("truetype"),
-    url("//db.onlinewebfonts.com/t/91e0638dac19aba2539d2b8b2a7981e8.svg#GT Walsheim Bold") format("svg"); }
+@font-face {
+    font-family: GT Walsheim Pro;
+    src: local("GT Walsheim Pro Regular"),local("GTWalsheimProRegular"),url(GTWalsheimProRegular.woff2) format("woff2"),url(GTWalsheimProRegular.woff) format("woff"),url(GTWalsheimProRegular.ttf) format("truetype");
+    font-weight: 400;
+    font-style: normal
+}
+  
+  @font-face {
+    font-family: GT Walsheim Pro;
+    src: local("GT Walsheim Pro Bold"),local("GTWalsheimProBold"),url(GTWalsheimProBold.woff2) format("woff2"),url(GTWalsheimProBold.woff) format("woff"),url(GTWalsheimProBold.ttf) format("truetype");
+    font-weight: 700;
+    font-style: normal
+}
